# jag_enforce

./: .gitignore  CMakeLists.txt  README.md  enforce.hpp  enforce.t.cpp
.github/workflows/: cmake-macos.yml  cmake-multi-platform.yml
